--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -340,6 +340,7 @@
     <Compile Include="Symbols\Memory\Array\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
+    <Compile Include="SyntaxAnalysis\Body\BlockForLoopParser.vb" />
     <Compile Include="SyntaxAnalysis\ObjectOperator.vb" />
     <Compile Include="SyntaxAnalysis\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="SyntaxAnalysis\ClassParser.vb" />
