--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -341,6 +341,7 @@
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
     <Compile Include="SyntaxAnalysis\Body\BlockForLoopParser.vb" />
+    <Compile Include="SyntaxAnalysis\Body\BlockDoLoopParser.vb" />
     <Compile Include="SyntaxAnalysis\ObjectOperator.vb" />
     <Compile Include="SyntaxAnalysis\Expressions\ArrayExpressionParser.vb" />
     <Compile Include="SyntaxAnalysis\ClassParser.vb" />
