--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -137,6 +137,7 @@
     <Compile Include="loopTest2.vb" />
     <Compile Include="loopTest3.vb" />
     <Compile Include="loopTest4.vb" />
+    <Compile Include="functionReferenceTest.vb" />
     <Compile Include="multipleLevelLoops.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
