add more math function imports

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -138,6 +138,7 @@
     <Compile Include="loopTest3.vb" />
     <Compile Include="loopTest4.vb" />
     <Compile Include="functionReferenceTest.vb" />
+    <Compile Include="logicalTest.vb" />
     <Compile Include="multipleLevelLoops.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
