--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -140,6 +140,7 @@
     <Compile Include="functionReferenceTest.vb" />
     <Compile Include="logicalTest.vb" />
     <Compile Include="functionVariableTest.vb" />
+    <Compile Include="rectangleArrayTest.vb" />
     <Compile Include="multipleLevelLoops.vb" />
     <Compile Include="structurearrayTest.vb" />
     <Compile Include="multipleModuleContructortest.vb" />
