move test demo source file to test folder

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -131,34 +131,35 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="differenceTest.vb" />
-    <Compile Include="arrayDeclareTest2.vb" />
-    <Compile Include="loopTest1.vb" />
-    <Compile Include="loopTest2.vb" />
-    <Compile Include="loopTest3.vb" />
-    <Compile Include="loopTest4.vb" />
-    <Compile Include="functionReferenceTest.vb" />
-    <Compile Include="logicalTest.vb" />
-    <Compile Include="functionVariableTest.vb" />
-    <Compile Include="rectangleArrayTest.vb" />
-    <Compile Include="multipleLevelLoops.vb" />
-    <Compile Include="structurearrayTest.vb" />
-    <Compile Include="multipleModuleContructortest.vb" />
-    <Compile Include="structuretest.vb" />
-    <Compile Include="ClassTest.vb" />
-    <Compile Include="Module1.vb" />
-    <Compile Include="DeclareTest.vb" />
-    <Compile Include="ForLoopTest.vb" />
-    <Compile Include="EnumTest.vb" />
-    <Compile Include="boolTest.vb" />
-    <Compile Include="functionTest.vb" />
-    <Compile Include="arrayTest.vb" />
-    <Compile Include="incrementTest.vb" />
-    <Compile Include="dictionarytest.vb" />
-    <Compile Include="arrayTest2.vb" />
-    <Compile Include="classTest3.vb" />
-    <Compile Include="Modulemethod_test.vb" />
-    <Compile Include="nullreferenceTest.vb" />
+    <Compile Include="test\differenceTest.vb" />
+    <Compile Include="test\arrayDeclareTest2.vb" />
+    <Compile Include="test\loopTest1.vb" />
+    <Compile Include="test\loopTest2.vb" />
+    <Compile Include="test\loopTest3.vb" />
+    <Compile Include="test\loopTest4.vb" />
+    <Compile Include="test\functionReferenceTest.vb" />
+    <Compile Include="test\logicalTest.vb" />
+    <Compile Include="test\functionVariableTest.vb" />
+    <Compile Include="test\starterTest.vb" />
+    <Compile Include="test\rectangleArrayTest.vb" />
+    <Compile Include="test\multipleLevelLoops.vb" />
+    <Compile Include="test\structurearrayTest.vb" />
+    <Compile Include="test\multipleModuleContructortest.vb" />
+    <Compile Include="test\structuretest.vb" />
+    <Compile Include="test\ClassTest.vb" />
+    <Compile Include="globalStarter.vb" />
+    <Compile Include="test\DeclareTest.vb" />
+    <Compile Include="test\ForLoopTest.vb" />
+    <Compile Include="test\EnumTest.vb" />
+    <Compile Include="test\boolTest.vb" />
+    <Compile Include="test\functionTest.vb" />
+    <Compile Include="test\arrayTest.vb" />
+    <Compile Include="test\incrementTest.vb" />
+    <Compile Include="test\dictionarytest.vb" />
+    <Compile Include="test\arrayTest2.vb" />
+    <Compile Include="test\classTest3.vb" />
+    <Compile Include="test\Modulemethod_test.vb" />
+    <Compile Include="test\nullreferenceTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -174,7 +175,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Stringstest.vb" />
+    <Compile Include="test\Stringstest.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -195,7 +196,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="test\packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\modules\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
