expression group is null or empty?

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -330,6 +330,7 @@
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
     <Compile Include="Symbols\Memory\IntPtr.vb" />
+    <Compile Include="Symbols\Extensions.vb" />
     <Compile Include="Symbols\TypeSymbol.vb" />
     <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
     <Compile Include="Symbols\Memory\Array\ArrayBlockOperator.vb" />
