add test demo code

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -140,6 +140,7 @@
     <Compile Include="test\functionReferenceTest.vb" />
     <Compile Include="test\logicalTest.vb" />
     <Compile Include="test\functionVariableTest.vb" />
+    <Compile Include="test\rectangleArrayTest2.vb" />
     <Compile Include="test\starterTest.vb" />
     <Compile Include="test\rectangleArrayTest.vb" />
     <Compile Include="test\multipleLevelLoops.vb" />
