type conversion not working??

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -141,6 +141,7 @@
     <Compile Include="test\logicalTest.vb" />
     <Compile Include="test\functionVariableTest.vb" />
     <Compile Include="test\ForLoopTest2.vb" />
+    <Compile Include="test\DeclareTest2.vb" />
     <Compile Include="test\rectangleArrayTest2.vb" />
     <Compile Include="test\starterTest.vb" />
     <Compile Include="test\rectangleArrayTest.vb" />
