add simple gc test

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -142,6 +142,7 @@
     <Compile Include="test\functionVariableTest.vb" />
     <Compile Include="test\ForLoopTest2.vb" />
     <Compile Include="test\DeclareTest2.vb" />
+    <Compile Include="test\GCtest.vb" />
     <Compile Include="test\rectangleArrayTest2.vb" />
     <Compile Include="test\starterTest.vb" />
     <Compile Include="test\rectangleArrayTest.vb" />
