--- a/test/jstest/vbscripts/js_object/js_object.vbproj
+++ b/test/jstest/vbscripts/js_object/js_object.vbproj
@@ -64,7 +64,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="objectGC.vb" />
+    <Compile Include="numberArray.vb" />
     <Compile Include="rectangle.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
