add webassembly class object array test

--- a/test/jstest/vbscripts/js_object/js_object.vbproj
+++ b/test/jstest/vbscripts/js_object/js_object.vbproj
@@ -64,6 +64,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="loopOnArray.vb" />
     <Compile Include="objectGC.vb" />
     <Compile Include="numberArray.vb" />
     <Compile Include="rectangle.vb" />
