--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -331,6 +331,8 @@
     <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
+    <Compile Include="Symbols\Exception\JavaScriptError.vb" />
+    <Compile Include="Symbols\Exception\ExceptionApi.vb" />
     <Compile Include="Symbols\Memory\IntPtr.vb" />
     <Compile Include="Symbols\Extensions.vb" />
     <Compile Include="Symbols\TypeSymbol.vb" />
