--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -331,6 +331,7 @@
     <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
+    <Compile Include="SyntaxAnalysis\CompilerServices\NamespaceDoc.vb" />
     <Compile Include="Symbols\Exception\JavaScriptError.vb" />
     <Compile Include="Symbols\Exception\ExceptionApi.vb" />
     <Compile Include="Symbols\Memory\IntPtr.vb" />
@@ -385,7 +386,7 @@
     <Compile Include="Symbols\EnumSymbol.vb" />
     <Compile Include="SyntaxAnalysis\Body\BlockParser.vb" />
     <Compile Include="SyntaxAnalysis\AsTypeHandler.vb" />
-    <Compile Include="SyntaxAnalysis\AttributeParser.vb" />
+    <Compile Include="SyntaxAnalysis\CompilerServices\AttributeParser.vb" />
     <Compile Include="SyntaxAnalysis\StringParser.vb" />
     <Compile Include="SyntaxAnalysis\ModuleParser.vb" />
     <Compile Include="Compiler\Link\SymbolTable.vb" />
@@ -455,9 +456,7 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.6.3\analyzers\dotnet\vb\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.6.3\analyzers\dotnet\vb\Microsoft.CodeAnalysis.VisualBasic.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Symbols\CompilerServices\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.13\build\net35\SQLitePCLRaw.lib.e_sqlite3.linux.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.13\build\net35\SQLitePCLRaw.lib.e_sqlite3.linux.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
