add object initialize test

--- a/test/test/test.vbproj
+++ b/test/test/test.vbproj
@@ -143,6 +143,7 @@
     <Compile Include="test\ForLoopTest2.vb" />
     <Compile Include="test\DeclareTest2.vb" />
     <Compile Include="test\GCtest.vb" />
+    <Compile Include="test\objectArrayInitlizeTest.vb" />
     <Compile Include="test\objectArrayTest.vb" />
     <Compile Include="test\nestedTest.vb" />
     <Compile Include="test\rectangleArrayTest2.vb" />
