--- a/vanilla/vanilla.vbproj
+++ b/vanilla/vanilla.vbproj
@@ -99,6 +99,7 @@
     <Prefer32Bit>true</Prefer32Bit>
     <RemoveIntegerChecks>true</RemoveIntegerChecks>
     <DebugSymbols>true</DebugSymbols>
+    <DefineConstants>UNIX=TRUE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Publish|AnyCPU'">
     <DefineTrace>true</DefineTrace>
