improvements of the symbol imports handler

--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -359,6 +359,7 @@
     <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
+    <Compile Include="Symbols\DeclaredObject\JavaScriptImports\InternalIndexer.vb" />
     <Compile Include="SyntaxAnalysis\CompilerServices\NamespaceDoc.vb" />
     <Compile Include="Symbols\Exception\JavaScriptError.vb" />
     <Compile Include="Symbols\Exception\ExceptionApi.vb" />
