--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -360,6 +360,7 @@
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
     <Compile Include="Symbols\DeclaredObject\JavaScriptImports\InternalIndexer.vb" />
+    <Compile Include="Symbols\DeclaredObject\JavaScriptImports\Text.vb" />
     <Compile Include="SyntaxAnalysis\CompilerServices\NamespaceDoc.vb" />
     <Compile Include="Symbols\Exception\JavaScriptError.vb" />
     <Compile Include="Symbols\Exception\ExceptionApi.vb" />
