--- a/vanilla/vanilla.NET5.vbproj
+++ b/vanilla/vanilla.NET5.vbproj
@@ -14,6 +14,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineConstants>netcore5=1,UNIX=0</DefineConstants>
     <DocumentationFile>vanilla.NET5.xml</DocumentationFile>
+    <OutputPath>D:\vanilla\Apps\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
