--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/vs_solutions/dev-kit"]
 	path = modules/vs_solutions/dev-kit
 	url = https://github.com/xieguigang/dev-kit.git
+[submodule "runtime/Linq.ts"]
+	path = runtime/Linq.ts
+	url = https://github.com/biocad-cloud/data.ts.git
