--- a/runtime/WebAssembly/tsconfig.json
+++ b/runtime/WebAssembly/tsconfig.json
@@ -5,8 +5,8 @@
     "lib": [ "dom", "es6", "dom.iterable", "scripthost" ],
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "../dist",
-    "outFile": "../../dist/visualbasic.wasm.js",
+    "outDir": "../build",
+    "outFile": "../build/visualbasic.wasm.js",
     "declaration": true
   },
   "exclude": [
