--- a/Roslyn/Roslyn.vbproj
+++ b/Roslyn/Roslyn.vbproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.0.0-1.final" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\modules\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\WAT\WAT.vbproj" />
   </ItemGroup>
