--- a/src/WAT/WAT.vbproj
+++ b/src/WAT/WAT.vbproj
@@ -43,4 +43,11 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
