--- a/src/Roslyn/Roslyn.vbproj
+++ b/src/Roslyn/Roslyn.vbproj
@@ -12,6 +12,7 @@
     <Authors>developer@vanillavb.app</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Platforms>AnyCPU;ARM32;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
