--- a/src/UnitTest/UnitTest.vbproj
+++ b/src/UnitTest/UnitTest.vbproj
@@ -5,6 +5,7 @@
     <RootNamespace>UnitTest</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
     <StartupObject>UnitTest.Test</StartupObject>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
