convert IL to WASM

--- a/src/WAT/WAT.vbproj
+++ b/src/WAT/WAT.vbproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\modules\Microsoft.VisualBasic.Core\src\Core.vbproj" />
+    <ProjectReference Include="..\..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.NET5.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
