fix of project reference errors

--- a/src/vanilla/vanilla.NET5.vbproj
+++ b/src/vanilla/vanilla.NET5.vbproj
@@ -37,9 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\modules\Microsoft.VisualBasic.Core\src\Core.vbproj" />
-    <ProjectReference Include="..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.NET5.vbproj" />
-    <ProjectReference Include="..\wasm\Wasm.NET5.vbproj" />
+    <ProjectReference Include="..\..\modules\Microsoft.VisualBasic.Core\src\Core.vbproj" />
+    <ProjectReference Include="..\..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.NET5.vbproj" />
+    <ProjectReference Include="..\WAT\WAT.vbproj" />
   </ItemGroup>
 
 </Project>
