--- a/src/vanilla/vanilla.NET5.vbproj
+++ b/src/vanilla/vanilla.NET5.vbproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\modules\Microsoft.VisualBasic.Core\src\Core.vbproj" />
     <ProjectReference Include="..\..\modules\vs_solutions\dev-kit\VisualStudio\VisualStudio.NET5.vbproj" />
+    <ProjectReference Include="..\Roslyn\Roslyn.vbproj" />
     <ProjectReference Include="..\WAT\WAT.vbproj" />
   </ItemGroup>
 
