--- a/src/WAT/WAT.vbproj
+++ b/src/WAT/WAT.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>VanillaBasic.WebAssembly</RootNamespace>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>.NETCoreApp,Version=v5.0</TargetFramework>
     <AssemblyName>VanillaBasic.WebAssembly</AssemblyName>
     <PackageProjectUrl>https://vanillavb.app/</PackageProjectUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -14,6 +14,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Platforms>AnyCPU;x64</Platforms>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
