--- a/src/vanilla/vanilla.NET5.vbproj
+++ b/src/vanilla/vanilla.NET5.vbproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <RootNamespace>Wasm</RootNamespace>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>.NETCoreApp,Version=v5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
     <OutputType>Exe</OutputType>
     <StartupObject>Sub Main</StartupObject>
     <AssemblyName>vanilla</AssemblyName>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -30,6 +31,9 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <DocumentationFile>vanilla.NET5.xml</DocumentationFile>
+    <RemoveIntegerChecks>true</RemoveIntegerChecks>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
