vs 2020 is not working with .net 5?

--- a/src/Roslyn/Roslyn.vbproj
+++ b/src/Roslyn/Roslyn.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>VanillaBasic.Roslyn</RootNamespace>
-    <TargetFramework>.NETCoreApp,Version=v5.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>VanillaBasic.Roslyn</AssemblyName>
     <Description>WebAssembly Compiler for Microsoft VisualBasic</Description>
     <Product>https://vanillavb.app/</Product>
