--- a/src/WAT/WAT.vbproj
+++ b/src/WAT/WAT.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>VanillaBasic.WebAssembly</RootNamespace>
-    <TargetFramework>.NETCoreApp,Version=v5.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>VanillaBasic.WebAssembly</AssemblyName>
     <PackageProjectUrl>https://vanillavb.app/</PackageProjectUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
