--- a/src/vanilla/vanilla.NET5.vbproj
+++ b/src/vanilla/vanilla.NET5.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>Wasm</RootNamespace>
-    <TargetFramework>.NETCoreApp,Version=v5.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
     <OutputType>Exe</OutputType>
     <StartupObject>Sub Main</StartupObject>
