--- a/src/Roslyn/Roslyn.vbproj
+++ b/src/Roslyn/Roslyn.vbproj
@@ -51,6 +51,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.0.0-2.final" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.0.0-2.final" />
   </ItemGroup>
 
