--- a/src/vanilla/vanilla.NET5.vbproj
+++ b/src/vanilla/vanilla.NET5.vbproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.0.0-2.final" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.0.0-2.final" />
   </ItemGroup>
 
