--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = modules/vs_solutions/dev-kit
 	url = https://github.com/xieguigang/dev-kit.git
 
+[submodule "runtime"]
+	path = runtime
+	url = ./runtime
