add js submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,7 @@
 	path = modules/vs_solutions/dev-kit
 	url = https://github.com/xieguigang/dev-kit.git
 
+
 [submodule "runtime"]
 	path = runtime
-	url = ./runtime
+	url = https://github.com/dotvanilla/visualbasic.wasm.js.git
